[package]
name = "banford"
version = "0.1.0"
authors = ["tjohnson <trent.johnson@banno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
plotters = "^0.2.15"
clap = "3.0.0-beta.1"
csv="1.1.3"
serde = { version = "1", features = ["derive"] }
itertools = "0.9.0"